Css fix for z-index of toasts

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -98,6 +98,7 @@
 }
 
 #results-container{
+  z-index: 9999;
   position: absolute;
   height: 100%;
   padding:10px;
